Backend finished (there may be errors, I will found out during the frontend)
