# doc/api.yaml
@@ -292,6 +292,22 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         "500":
           $ref: "#/components/responses/InternalServerError" 
+    get:
+      tags: ["photos"]
+      summary: Get photos
+      description: Get the user photos
+      operationId: getUserPhotos
+      responses:
+        "200":
+          $ref: "#/components/responses/OK"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401": 
+          $ref: '#/components/responses/Unauthorized'
+        "404": 
+          $ref: "#/components/responses/NotFound" 
+        "500":
+          $ref: "#/components/responses/InternalServerError"
   /users/{idUser}/posts/{idPhoto}:
     parameters:
       - $ref: "#/components/parameters/idUser"
