# service/api/api-handler.go
@@ -11,7 +11,7 @@ import (
 		rt.router.GET("/users/:idUser", rt.wrap(rt.getUserProfile, true))
 		rt.router.GET("/users/:idUser/stream", rt.wrap(rt.getMyStream, true))
 		rt.router.PUT("/users/:idUser/edit", rt.wrap(rt.setMyUsername, true))
-		// getPhotos
+		rt.router.GET("/users/:idUser/posts", rt.wrap(rt.getUserPhotos, true))
 	
 		// Post 
 		rt.router.POST("/users/:idUser/posts", rt.wrap(rt.uploadPhoto, true))
@@ -20,7 +20,7 @@ import (
 		// Comment 
 		rt.router.POST("/users/:idUser/posts/:idPhoto/comments", rt.wrap(rt.commentPhoto, true))
 		rt.router.DELETE("/users/:idUser/posts/:idPhoto/comments/:idComment", rt.wrap(rt.uncommentPhoto, true))	
-		// getComments
+		rt.router.GET("/users/:idUser/posts/:idPhoto/comments", rt.wrap(rt.getComments, true))
 
 		// Like
 		rt.router.PUT("/users/:idUser/posts/:idPhoto/likes", rt.wrap(rt.likePhoto, true))
