# service/api/get-getUserPhotos.go
@@ -10,9 +10,9 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
-func (rt *_router) getLikes(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+func (rt *_router) getUserPhotos(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	w.Header().Set("Content-type", "application/json")
-
+	
 	// Get the uid from the url
 	uid, err := strconv.Atoi(ps.ByName("idUser"))
 	if err != nil {
@@ -26,25 +26,19 @@ func (rt *_router) getLikes(w http.ResponseWriter, r *http.Request, ps httproute
 		return
 	}
 
-	// Get the post_id from the url
-	pid, err := strconv.Atoi(ps.ByName("idPhoto"))
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return 
-	}
-
-	// Get likes from the database
-	likes, res, err := rt.db.GetLikes(uid, pid	)
-	if res == database.ERROR {
+	// Get the posts from database
+	posts, res, err := rt.db.GetUserPhotos(uid)
+	if res == database.ERROR || err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
 	// Encode the response
 	w.WriteHeader(http.StatusOK)
-	if err = json.NewEncoder(w).Encode(likes); err != nil {
+	if err = json.NewEncoder(w).Encode(posts); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
-	return		
+		return 
 	}
 	
+
 }
